add_subdirectory(simpleStorage)
add_subdirectory(bcstatetransfer)
add_subdirectory(testSerialization)
add_subdirectory(metadataStorage)
add_subdirectory(s3)
add_subdirectory(testViewChange)
add_subdirectory(testMsgsCertificate)
add_subdirectory(controllerWithSimpleHistory)
add_subdirectory(clientsManager)
add_subdirectory(testSeqNumForClientRequest)
add_subdirectory(messages)
add_subdirectory(keyManager)
add_subdirectory(testSequenceWithActiveWindow)
add_subdirectory(testCrypto)
add_subdirectory(SigManager)
