add_subdirectory(simpleStorage)
add_subdirectory(bcstatetransfer)
add_subdirectory(testSerialization)
add_subdirectory(metadataStorage)
add_subdirectory(s3)
add_subdirectory(testViewChange)
add_subdirectory(testMsgsCertificate)
add_subdirectory(controllerWithSimpleHistory)
add_subdirectory(clientsManager)
add_subdirectory(testSeqNumForClientRequest)
add_subdirectory(messages)
add_subdirectory(keyManager)
add_subdirectory(KeyStore)
add_subdirectory(testSequenceWithActiveWindow)
add_subdirectory(SigManager)
add_subdirectory(timeServiceResPageClient)
add_subdirectory(timeServiceManager)
add_subdirectory(incomingMsgsStorage)
add_subdirectory(testRequestThreadPool)
